<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>teamX_challenge</name>
  <version>0.0.0</version>
  <description>Team X Challenge Package with YOLOv5 armor detection</description>
  <maintainer email="2455862495@qq.com">GGb0nd</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>referee_pkg</depend>
  <depend>gazebo_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>

  <!-- 添加 ONNX Runtime 依赖 -->
  <build_depend>libonnxruntime-dev</build_depend>
  <exec_depend>libonnxruntime</exec_depend>

  <!-- 添加 OpenCV 依赖（确保完整） -->
  <depend>opencv</depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>